--- a/christmas/index.html
+++ b/christmas/index.html
@@ -14,7 +14,7 @@
 		<div class="merry">
 			<h1>Merry Christmas</h1>
 		</div>
-	<div class="fox">
+	<div class="Dear">
 		<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25839/critters.svg" width="300px">
 	</div>
 	<div class="tree">
